--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#about">Products</a></li>
-                <li><a href="#projects">About Us</a></li>
+                <li><a href="#product">Products</a></li>
+                <li><a href="#about_us">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="forum.html">Forum</a></li>
             </ul>
         </nav>
     </header>
@@ -26,20 +25,7 @@
             <p class="motto">AETHERIS SOFTWARE</p>
         </div>
         <section id="product">
-            <h1>Product 1</h1>
-            <h2>Additional info</h2>
-            <table>
-                <tr>
-                    <th>Project Name</th>
-                    <th>Requirements</th>
-                    <th>Price</th>
-                </tr>
-                <tr>
-                    <td>Product 1</td>
-                    <td>Description</td>
-                    <td>10$</td>
-                </tr>
-            </table>
+            <h1>Sorry, we don't have products yet :)</h1>
         </section>
         <section id="contact">
             <h2>Contact us</h2>
